# lucky-spelling-test

./: .gitignore  AGENTS.md  README.md  pyproject.toml  start-preview.bat
content/page-22/: lesson.json  words.txt
docs/: app.js  index.html  styles.css  words.json  words.txt
docs/lessons/: previous.json
examples/: sample_words.txt
lucky_spelling/: __init__.py  audio.py  cli.py  deploy.py  ocr.py  site.py  words.py
templates/: app.js  index.html  styles.css
tests/: test_site_generation.py  test_words.py
